# incident_management_system

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  incidents.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  base.py  incident.py  user.py
app/repositories/: base.py  incident.py  user.py
app/schemas/: incident.py  token.py  user.py
app/services/: auth.py  incident.py  search.py  user.py
frontend/: package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/dashboard/: page.tsx
frontend/lib/: api.ts
migrations/: env.py
migrations/versions/: 3e79a9865c6b_initial_migration.py  5dc8cd5d4d4b_initial_migration.py
scripts/: backfill_search.py
